Archive2/70/4377b5d3f1ef69/output
main.cpp:11:5: error: expected unqualified-id before '/' token
     /...
     ^
main.cpp:14:5: error: expected unqualified-id before '/' token
     /...
     ^
main.cpp: In constructor 'HtmlRover::HtmlRover(const const_iterator&, const const_iterator&)':
main.cpp:18:5: error: class 'HtmlRover' does not have any field named '_curIter'
     _curIter(it1), _offend(it2)
     ^
